Compilers/src/xaglParser.py
# Generated from xagl.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class xaglParser ( Parser ):

    grammarFileName = "xagl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'for'", "'in'", "'..'", "'do'", "'{'", 
                     "'}'", "'-'", "'+'", "'('", "')'", "'*'", "'/'", "'//'", 
                     "'%'", "'=='", "'>'", "'<'", "'>='", "'<='", "'!='", 
                     "'not'", "'and'", "'or'", "'.'", "'='", "';'", "'move'", 
                     "'by'", "'refresh'", "'after'", "'ms'", "'every'", 
                     "','", "'s'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT", "NUMBER", 
                      "STRING", "BOOL", "WS", "ID", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_for = 2
    RULE_expr = 3
    RULE_variable_assignment = 4
    RULE_view_actions = 5
    RULE_move = 6
    RULE_refresh = 7
    RULE_view = 8
    RULE_vector = 9
    RULE_point = 10
    RULE_time = 11

    ruleNames =  [ "program", "statement", "for", "expr", "variable_assignment", 
                   "view_actions", "move", "refresh", "view", "vector", 
                   "point", "time" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    INT=35
    NUMBER=36
    STRING=37
    BOOL=38
    WS=39
    ID=40
    LINE_COMMENT=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(xaglParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.StatementContext)
            else:
                return self.getTypedRuleContext(xaglParser.StatementContext,i)


        def getRuleIndex(self):
            return xaglParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = xaglParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1615580889986) != 0):
                self.state = 24
                self.statement()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(xaglParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def view_actions(self):
            return self.getTypedRuleContext(xaglParser.View_actionsContext,0)


        def view(self):
            return self.getTypedRuleContext(xaglParser.ViewContext,0)


        def move(self):
            return self.getTypedRuleContext(xaglParser.MoveContext,0)


        def variable_assignment(self):
            return self.getTypedRuleContext(xaglParser.Variable_assignmentContext,0)


        def for_(self):
            return self.getTypedRuleContext(xaglParser.ForContext,0)


        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)


        def getRuleIndex(self):
            return xaglParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = xaglParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.view_actions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.view()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 34
                self.move()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                self.variable_assignment()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 36
                self.for_()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 37
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(xaglParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.ExprContext)
            else:
                return self.getTypedRuleContext(xaglParser.ExprContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.StatementContext)
            else:
                return self.getTypedRuleContext(xaglParser.StatementContext,i)


        def getRuleIndex(self):
            return xaglParser.RULE_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)




    def for_(self):

        localctx = xaglParser.ForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_for)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(xaglParser.T__0)
            self.state = 41
            self.match(xaglParser.ID)
            self.state = 42
            self.match(xaglParser.T__1)
            self.state = 43
            self.expr(0)
            self.state = 44
            self.match(xaglParser.T__2)
            self.state = 45
            self.expr(0)
            self.state = 46
            self.match(xaglParser.T__3)
            self.state = 47
            self.match(xaglParser.T__4)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1615580889986) != 0):
                self.state = 48
                self.statement()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(xaglParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None


        def getRuleIndex(self):
            return xaglParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.type_ = ctx.type_


    class ExprComparisonContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.ExprContext)
            else:
                return self.getTypedRuleContext(xaglParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprComparison" ):
                listener.enterExprComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprComparison" ):
                listener.exitExprComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprComparison" ):
                return visitor.visitExprComparison(self)
            else:
                return visitor.visitChildren(self)


    class ExprpointContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def point(self):
            return self.getTypedRuleContext(xaglParser.PointContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprpoint" ):
                listener.enterExprpoint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprpoint" ):
                listener.exitExprpoint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprpoint" ):
                return visitor.visitExprpoint(self)
            else:
                return visitor.visitChildren(self)


    class ExprStringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(xaglParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprString" ):
                listener.enterExprString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprString" ):
                listener.exitExprString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprString" ):
                return visitor.visitExprString(self)
            else:
                return visitor.visitChildren(self)


    class ExprParentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprParent" ):
                listener.enterExprParent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprParent" ):
                listener.exitExprParent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprParent" ):
                return visitor.visitExprParent(self)
            else:
                return visitor.visitChildren(self)


    class ExprIntContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(xaglParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprInt" ):
                listener.enterExprInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprInt" ):
                listener.exitExprInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprInt" ):
                return visitor.visitExprInt(self)
            else:
                return visitor.visitChildren(self)


    class ExprNotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprNot" ):
                listener.enterExprNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprNot" ):
                listener.exitExprNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNot" ):
                return visitor.visitExprNot(self)
            else:
                return visitor.visitChildren(self)


    class ExprMultDivModContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.ExprContext)
            else:
                return self.getTypedRuleContext(xaglParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprMultDivMod" ):
                listener.enterExprMultDivMod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprMultDivMod" ):
                listener.exitExprMultDivMod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprMultDivMod" ):
                return visitor.visitExprMultDivMod(self)
            else:
                return visitor.visitChildren(self)


    class ExprAddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.ExprContext)
            else:
                return self.getTypedRuleContext(xaglParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAddSub" ):
                listener.enterExprAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAddSub" ):
                listener.exitExprAddSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAddSub" ):
                return visitor.visitExprAddSub(self)
            else:
                return visitor.visitChildren(self)


    class ExprLogicalContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.ExprContext)
            else:
                return self.getTypedRuleContext(xaglParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprLogical" ):
                listener.enterExprLogical(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprLogical" ):
                listener.exitExprLogical(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprLogical" ):
                return visitor.visitExprLogical(self)
            else:
                return visitor.visitChildren(self)


    class ExprUnaryContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.uop = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprUnary" ):
                listener.enterExprUnary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprUnary" ):
                listener.exitExprUnary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprUnary" ):
                return visitor.visitExprUnary(self)
            else:
                return visitor.visitChildren(self)


    class ExprtimeContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def time(self):
            return self.getTypedRuleContext(xaglParser.TimeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprtime" ):
                listener.enterExprtime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprtime" ):
                listener.exitExprtime(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprtime" ):
                return visitor.visitExprtime(self)
            else:
                return visitor.visitChildren(self)


    class ExprvectorContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def vector(self):
            return self.getTypedRuleContext(xaglParser.VectorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprvector" ):
                listener.enterExprvector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprvector" ):
                listener.exitExprvector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprvector" ):
                return visitor.visitExprvector(self)
            else:
                return visitor.visitChildren(self)


    class ExprnumberContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(xaglParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprnumber" ):
                listener.enterExprnumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprnumber" ):
                listener.exitExprnumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprnumber" ):
                return visitor.visitExprnumber(self)
            else:
                return visitor.visitChildren(self)


    class ExprBoolContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(xaglParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprBool" ):
                listener.enterExprBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprBool" ):
                listener.exitExprBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprBool" ):
                return visitor.visitExprBool(self)
            else:
                return visitor.visitChildren(self)


    class ExprIDContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(xaglParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprID" ):
                listener.enterExprID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprID" ):
                listener.exitExprID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprID" ):
                return visitor.visitExprID(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = xaglParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = xaglParser.ExprUnaryContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 57
                localctx.uop = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==7 or _la==8):
                    localctx.uop = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 58
                self.expr(15)
                pass

            elif la_ == 2:
                localctx = xaglParser.ExprParentContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 59
                self.match(xaglParser.T__8)
                self.state = 60
                self.expr(0)
                self.state = 61
                self.match(xaglParser.T__9)
                pass

            elif la_ == 3:
                localctx = xaglParser.ExprNotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 63
                self.match(xaglParser.T__20)
                self.state = 64
                self.expr(10)
                pass

            elif la_ == 4:
                localctx = xaglParser.ExprtimeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 65
                self.time()
                pass

            elif la_ == 5:
                localctx = xaglParser.ExprBoolContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 66
                self.match(xaglParser.BOOL)
                pass

            elif la_ == 6:
                localctx = xaglParser.ExprIDContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 67
                self.match(xaglParser.ID)
                pass

            elif la_ == 7:
                localctx = xaglParser.ExprStringContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 68
                self.match(xaglParser.STRING)
                pass

            elif la_ == 8:
                localctx = xaglParser.ExprpointContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 69
                self.point()
                pass

            elif la_ == 9:
                localctx = xaglParser.ExprvectorContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 70
                self.vector()
                pass

            elif la_ == 10:
                localctx = xaglParser.ExprnumberContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.match(xaglParser.NUMBER)
                pass

            elif la_ == 11:
                localctx = xaglParser.ExprIntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.match(xaglParser.INT)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 87
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = xaglParser.ExprMultDivModContext(self, xaglParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 75
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 76
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30720) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 77
                        self.expr(14)
                        pass

                    elif la_ == 2:
                        localctx = xaglParser.ExprAddSubContext(self, xaglParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 78
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 79
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==7 or _la==8):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 80
                        self.expr(13)
                        pass

                    elif la_ == 3:
                        localctx = xaglParser.ExprComparisonContext(self, xaglParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 81
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 82
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2064384) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 83
                        self.expr(12)
                        pass

                    elif la_ == 4:
                        localctx = xaglParser.ExprLogicalContext(self, xaglParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 84
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 85
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==22 or _la==23):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 86
                        self.expr(10)
                        pass

             
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Variable_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(xaglParser.ID)
            else:
                return self.getToken(xaglParser.ID, i)

        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)


        def getRuleIndex(self):
            return xaglParser.RULE_variable_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_assignment" ):
                listener.enterVariable_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_assignment" ):
                listener.exitVariable_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_assignment" ):
                return visitor.visitVariable_assignment(self)
            else:
                return visitor.visitChildren(self)




    def variable_assignment(self):

        localctx = xaglParser.Variable_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(xaglParser.ID)
            self.state = 93
            self.match(xaglParser.T__23)
            self.state = 94
            self.match(xaglParser.ID)
            self.state = 95
            self.match(xaglParser.T__24)
            self.state = 96
            self.expr(0)
            self.state = 97
            self.match(xaglParser.T__25)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class View_actionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return xaglParser.RULE_view_actions

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class View_action_refreshContext(View_actionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.View_actionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def refresh(self):
            return self.getTypedRuleContext(xaglParser.RefreshContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterView_action_refresh" ):
                listener.enterView_action_refresh(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitView_action_refresh" ):
                listener.exitView_action_refresh(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitView_action_refresh" ):
                return visitor.visitView_action_refresh(self)
            else:
                return visitor.visitChildren(self)



    def view_actions(self):

        localctx = xaglParser.View_actionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_view_actions)
        try:
            localctx = xaglParser.View_action_refreshContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.refresh()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return xaglParser.RULE_move

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Move_variableContext(MoveContext):
